--- a/style.css
+++ b/style.css
@@ -1,14 +1,40 @@
-
-
-.calc-solar {
-   background-color : black;
-   height: 25px;
-   width: 20px;
-   float: left;
-
+.wrapper {
+    text-align: center;
 }
-.calc-button {
-    height: 20px;
-    width: 35px;
-    
+.main {
+    background-color: #e9e9e9;
+    width: 350px;
+    height: 500px;
+    display:inline-block;
+    margin-top: 150px;
+    border-color: grey ;
+    border-width: 2px;
+    border-style: solid;
+    border-radius: 10%;
+}
+
+.textview {
+    margin: 30px;
+    padding: 10px;
+    height: 30px;
+    width: 270px;
+    border-radius: 50px;
+    outline: 0;
+}
+.calc-button, .calc-r1{
+    height: 50px;
+    width: 70px;
+    font-size: 20px;
+    margin-left: 4px;
+    border-radius: 50%;
+    outline: 0;
+    cursor: pointer;
+}
+
+.calc-r1 {
+    color: green;
+}
+
+.button-group {
+    padding-left: 15px;
 }
