--- a/style.css
+++ b/style.css
@@ -1,40 +1,61 @@
+* {
+    font-family: sans-serif;
+    
+}
 .wrapper {
     text-align: center;
 }
 .main {
-    background-color: #e9e9e9;
+    background-color: black;
     width: 350px;
-    height: 500px;
+    height: 400px;
     display:inline-block;
     margin-top: 150px;
     border-color: grey ;
     border-width: 2px;
     border-style: solid;
-    border-radius: 10%;
+    border-radius: 10px;
+    
 }
 
-.textview {
+.display{
     margin: 30px;
     padding: 10px;
     height: 30px;
     width: 270px;
-    border-radius: 50px;
-    outline: 0;
+    border-radius: 30px;
+    border-style: solid  #e9e9e9;
+    color:white;
+    text-align: right;
+    font-size: 60px;
+        
 }
+
 .calc-button, .calc-r1{
     height: 50px;
     width: 70px;
-    font-size: 20px;
+    font-size: 25px;
     margin-left: 4px;
-    border-radius: 50%;
-    outline: 0;
+    border-radius: 100%;
     cursor: pointer;
+    outline: 0;
+    color: white;
+    background-color: #505050;
 }
 
 .calc-r1 {
-    color: green;
+    color: black;
+    background-color: #D4D4D2;
+    
 }
+
+#btn-divide,#btn-multiply,#btn-minus,#btn-add {
+    background-color: #FF9500;
+    color: white;
+}
+
 
 .button-group {
     padding-left: 15px;
+    
 }
